--- a/Project2/shop.html
+++ b/Project2/shop.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecommerce-Website</title>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+    <title>Shop</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,8 +12,8 @@
 
         <div>
             <ul id="navbar">
-               <li><a class="active" href="index.html">Home</a></li>
-               <li><a href="shop.html">Shop</a></li>
+               <li><a href="index.html">Home</a></li>
+               <li><a class="active" href="shop.html">Shop</a></li>
                <li><a href="blog.html">Blog</a></li>
                <li><a href="about.html">About</a></li>
                <li><a href="contact.html">Contact</a></li>
@@ -29,186 +28,141 @@
         </div>
     </section>
 
-    <section id="hero">
-        <h4>Trade-in-offer</h4>
-        <h2>Super value deals</h2>
-        <h1>On all products</h1>
+    <section id="page-header">
+        <h2>#stayhome</h2>      
         <p>Save more with coupons & up to 70% off! </p>
-        <button>Shop Now</button>
-    </section>
-
-    <section id="feature" class="section-p1">
-        <div class="fe-box">
-          <img src="img/features/f1.png" alt="">
-          <h6>Free Shipping</h6>
-        </div>
-        <div class="fe-box">
-            <img src="img/features/f2.png" alt="">
-            <h6>Online Order</h6>
-          </div>
-          <div class="fe-box">
-            <img src="img/features/f3.png" alt="">
-            <h6>Save Money</h6>
-          </div>
-          <div class="fe-box">
-            <img src="img/features/f4.png" alt="">
-            <h6>Promotions</h6>
-          </div>
-          <div class="fe-box">
-            <img src="img/features/f5.png" alt="">
-            <h6>Happy Sell</h6>
-          </div>
-          <div class="fe-box">
-            <img src="img/features/f6.png" alt="">
-            <h6>F24/7Support</h6>
-          </div>
     </section>
 
     <section id="product1" class="section-p1">
-      <h2>Featured Products</h2>
-      <p>Summer collection New Modern Design</p>
-      <div class="pro-container">
-         <div class="pro">
-            <img src="img/products/f1.jpg" alt="">
-            <div class="des">
-               <span>Tommy Hilfiger</span>
-               <h5>Cartoon Astronaut Shirts</h5>
-               <div class="star">
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-               </div>
-               <h4>$80</h4>
-            </div>
-            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
-        </div>
-        <div class="pro">
-            <img src="img/products/f2.jpg" alt="">
-            <div class="des">
-               <span>Octave</span>
-               <h5>Floral Printed Shirts</h5>
-               <div class="star">
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-               </div>
-               <h4>$78</h4>
-            </div>
-            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
-        </div>
-        <div class="pro">
-            <img src="img/products/f3.jpg" alt="">
-            <div class="des">
-               <span>Duke</span>
-               <h5>Printed Shirts</h5>
-               <div class="star">
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-               </div>
-               <h4>$56</h4>
-            </div>
-            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
-        </div>
-        <div class="pro">
-            <img src="img/products/f4.jpg" alt="">
-            <div class="des">
-               <span>Levi's</span>
-               <h5>Shirts</h5>
-               <div class="star">
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-               </div>
-               <h4>$90</h4>
-            </div>
-            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
-        </div>
-        <div class="pro">
-            <img src="img/products/f5.jpg" alt="">
-            <div class="des">
-               <span>Puma</span>
-               <h5>Blue And Pink Shirts</h5>
-               <div class="star">
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-               </div>
-               <h4>$200</h4>
-            </div>
-            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
-        </div>
-        <div class="pro">
-            <img src="img/products/f6.jpg" alt="">
-            <div class="des">
-               <span>BlackBerry</span>
-               <h5>Multi-color Shirts</h5>
-               <div class="star">
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-               </div>
-               <h4>$81</h4>
-            </div>
-            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
-        </div>
-        <div class="pro">
-            <img src="img/products/f7.jpg" alt="">
-            <div class="des">
-               <span>Dressberry</span>
-               <h5>Oversized Pants</h5>
-               <div class="star">
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-               </div>
-               <h4>$73</h4>
-            </div>
-            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
-        </div>
-        <div class="pro">
-            <img src="img/products/f8.jpg" alt="">
-            <div class="des">
-               <span>Tokyo-Talkies</span>
-               <h5>Women Top</h5>
-               <div class="star">
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-               </div>
-               <h4>$41</h4>
-            </div>
-            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
-        </div>
-      </div>
-    </section>
-
-    <section id="banner" class="section-m1">
-        <h4>Repair Services</h4>
-        <h2>Up To <span>70% Off</span> - All t-Shirts& Accessories</h2>
-        <button class="normal">Explore More</button>
-    </section>
-
-    <section id="product1" class="section-p1">
-        <h2>New Arrivals</h2>
-        <p>Summer Collection New Modern Design</p>
         <div class="pro-container">
+           <div class="pro" onclick="window.location.href='sproduct.html';"">
+              <img src="img/products/f1.jpg" alt="">
+              <div class="des">
+                 <span>Tommy Hilfiger</span>
+                 <h5>Cartoon Astronaut Shirts</h5>
+                 <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                 </div>
+                 <h4>$80</h4>
+              </div>
+              <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+          </div>
+          <div class="pro">
+              <img src="img/products/f2.jpg" alt="">
+              <div class="des">
+                 <span>Octave</span>
+                 <h5>Floral Printed Shirts</h5>
+                 <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                 </div>
+                 <h4>$78</h4>
+              </div>
+              <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+          </div>
+          <div class="pro">
+              <img src="img/products/f3.jpg" alt="">
+              <div class="des">
+                 <span>Duke</span>
+                 <h5>Printed Shirts</h5>
+                 <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                 </div>
+                 <h4>$56</h4>
+              </div>
+              <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+          </div>
+          <div class="pro">
+              <img src="img/products/f4.jpg" alt="">
+              <div class="des">
+                 <span>Levi's</span>
+                 <h5>Shirts</h5>
+                 <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                 </div>
+                 <h4>$90</h4>
+              </div>
+              <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+          </div>
+          <div class="pro">
+              <img src="img/products/f5.jpg" alt="">
+              <div class="des">
+                 <span>Puma</span>
+                 <h5>Blue And Pink Shirts</h5>
+                 <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                 </div>
+                 <h4>$200</h4>
+              </div>
+              <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+          </div>
+          <div class="pro">
+              <img src="img/products/f6.jpg" alt="">
+              <div class="des">
+                 <span>BlackBerry</span>
+                 <h5>Multi-color Shirts</h5>
+                 <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                 </div>
+                 <h4>$81</h4>
+              </div>
+              <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+          </div>
+          <div class="pro">
+              <img src="img/products/f7.jpg" alt="">
+              <div class="des">
+                 <span>Dressberry</span>
+                 <h5>Oversized Pants</h5>
+                 <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                 </div>
+                 <h4>$73</h4>
+              </div>
+              <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+          </div>
+          <div class="pro">
+              <img src="img/products/f8.jpg" alt="">
+              <div class="des">
+                 <span>Tokyo-Talkies</span>
+                 <h5>Women Top</h5>
+                 <div class="star">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                 </div>
+                 <h4>$41</h4>
+              </div>
+              <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+          </div>
            <div class="pro">
               <img src="img/products/n1.jpg" alt="">
               <div class="des">
@@ -339,40 +293,13 @@
           </div>
         </div>
       </section>
-
-    <section id="sm-banner" class="section-p1">
-        <div class="banner-box">
-            <h4>crazy deals</h4>
-            <h2>buy 1 get 1 free</h2>
-            <span>The best classic dress is on sale at cara</span>
-            <button class="white">Learn More</button>
-        </div>
-        <div class="banner-box banner-box2">
-            <h4>spring/summer</h4>
-            <h2>upcoming season</h2>
-            <span>The best classic dress is on sale at cara</span>
-            <button class="white">Learn More</button>
-        </div>
+    
+    <section id="pagination" class="section-p1">
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#"><i class="fal fa-long-arrow-alt-right"></i></a>
     </section>
-
-    <section id="banner3">
-        <div class="banner-box">         
-            <h2>SEASONAL SALE</h2>
-            <h3>Winter-Collection -50% OFF</h3>
-        </div>
-
-        <div class="banner-box banner-box2">         
-            <h2>NEW FOOTWEAR COLLECTION</h2>
-            <h3>Spring / Summer 2022</h3>
-        </div>
-
-        <div class="banner-box banner-box3">         
-            <h2>SHIRTS</h2>
-            <h3>New Trendy Prints</h3>
-        </div>
-    </section>
-
-    <section id="newsletter" class="section-p1 section-m1">
+      <section id="newsletter" class="section-p1 section-m1">
         <div class="newstext">
             <h4>Sign Up For Newsletters</h4>
             <p>Get E-mail updates about our latest shop and <span>special offers.</span></p>
@@ -435,7 +362,5 @@
             <p>&copy 2021, E-Commerce Cara, All Rights Reserved</p>
         </div>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
